--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -46,7 +46,7 @@
       <x>10</x>
       <y>500</y>
       <width>631</width>
-      <height>192</height>
+      <height>91</height>
      </rect>
     </property>
    </widget>
@@ -61,6 +61,26 @@
     </property>
     <property name="text">
      <string>RUN</string>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="stdout_2">
+    <property name="geometry">
+     <rect>
+      <x>680</x>
+      <y>500</y>
+      <width>631</width>
+      <height>192</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="stdout_3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>610</y>
+      <width>631</width>
+      <height>81</height>
+     </rect>
     </property>
    </widget>
   </widget>
